--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mysql://83.212.105.20/hbstudent?useSSL=false&useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
-jdbc.user=hbstudent
-jdbc.pass=changeit
+jdbc.url=jdbc:mysql://83.212.105.20:3306/it21413?useSSL=false&useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
+jdbc.user=it21413
+jdbc.pass=123
 jdbc.driver=com.mysql.jdbc.Driver
